--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi
+fastapi==0.110.0
 uvicorn==0.30.0
-jinja2
-passlib==1.7.4
+passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
-python-jose[cryptography]
+jinja2==3.1.3
+python-multipart==0.0.9
+itsdangerous==2.2.0
