--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ jinja2==3.1.3
 python-multipart==0.0.9
 itsdangerous==2.2.0
 python-jose[cryptography]
+Flask
+Flask-Login
+Flask-Bcrypt
+Flask-SQLAlchemy
+python-dotenv
